# llama-index-template

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  pyproject.toml
src/api/: entrypoint.py
src/api/routes/: example_routes.py
src/utils/: logger.py
src/workflow/: events.py  parallel_workflow.py
