[project]
name = "llama-index-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Ricardo",email = "ricky_olalquiaga@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index-core (>=0.14.19,<0.15.0)",
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)"
]

[tool.poetry]
packages = [
    {include = "api", from = "src"},
    {include = "utils", from = "src"},
    {include = "workflow", from = "src"},    
    ]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
